<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:theme="@style/Base.DialogWindowTitle.AppCompat"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBillamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_msg_billamount"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/etBillamount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBillamount"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/main_hint_billamount"
        android:inputType="numberDecimal"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColorHint="@color/colorGrey"
        android:background="@android:color/transparent"/>

    <View
        android:id="@+id/vRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/etBillamount"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey" />

    <LinearLayout
        android:id="@+id/llRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vRatingButtons"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibRatingBad"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/main_contentDescr_badService"
            android:src="@drawable/emoticon_sad" />

        <ImageButton
            android:id="@+id/ibRatingOk"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/main_contentDescr_okService"
            android:src="@drawable/emoticon_neutral" />

        <ImageButton
            android:id="@+id/ibRatingGood"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/main_contentDescr_goodService"
            android:src="@drawable/emoticon_happy" />
    </LinearLayout>

    <View
        android:id="@+id/vServiceRating"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llRatingButtons"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tvServiceRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vServiceRating"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/main_msg_servicerating"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:id="@+id/llTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvServiceRating"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:showDividers="middle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTipPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_msg_tipPercentage"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvTipTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_msg_tipTotal"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
    </LinearLayout>
    <View
        android:id="@+id/vResult"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llTips"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tvBilltotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_big"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        android:text="@string/main_msg_billtotal"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBilltotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:text="@string/main_msg_billTotalResult" />


</RelativeLayout>